[gd_scene load_steps=15 format=3 uid="uid://1yrqwkydp78d"]

[ext_resource type="Script" uid="uid://bgd2v1alhdml" path="res://Scripts/screen_levelSelect.gd" id="2_7kq8d"]
[ext_resource type="AudioStream" uid="uid://bwf4nucobwg4x" path="res://Assets/Sounds/music/intense1.mp3" id="3_e37xu"]
[ext_resource type="PackedScene" uid="uid://cw2j64pbmrk6p" path="res://Other/Scenes/button_general.tscn" id="3_icvp0"]
[ext_resource type="Theme" uid="uid://8i27k6tj1d3o" path="res://Other/Themes/basic.tres" id="4_6dhn4"]

[sub_resource type="Gradient" id="Gradient_uas2u"]
colors = PackedColorArray(0.618933, 1.73271e-06, 3.85046e-07, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_agkmp"]
gradient = SubResource("Gradient_uas2u")

[sub_resource type="Animation" id="Animation_v8wcq"]
length = 0.001

[sub_resource type="Animation" id="Animation_f1f2o"]
resource_name = "fade_from_black"
length = 2.0

[sub_resource type="Animation" id="Animation_7qc2w"]
resource_name = "fade_to_black"
length = 3.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j83ll"]
_data = {
&"RESET": SubResource("Animation_v8wcq"),
&"fade_from_black": SubResource("Animation_f1f2o"),
&"fade_to_black": SubResource("Animation_7qc2w")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dhn4"]
resource_local_to_scene = true
size = Vector2(1920, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axjjw"]
resource_local_to_scene = true
size = Vector2(1296, 2688)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hirpx"]
resource_local_to_scene = true
size = Vector2(3456, 912)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8nxm7"]
resource_local_to_scene = true
size = Vector2(1552, 1792)

[node name="Level Set Screen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_7kq8d")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 544)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_e37xu")
volume_db = -43.89
autoplay = true

[node name="background" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.407843)
z_index = -5
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
mouse_filter = 2
texture = SubResource("GradientTexture1D_agkmp")
expand_mode = 1

[node name="fade_animation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_j83ll")
}
speed_scale = 5.0

[node name="level_icon_container" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0

[node name="buttons_blocked" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="blocked_zone" type="Area2D" parent="." groups=["blocked_zone_display"]]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocked_zone"]
position = Vector2(960, 1432)
shape = SubResource("RectangleShape2D_6dhn4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="blocked_zone"]
position = Vector2(2552, 448)
shape = SubResource("RectangleShape2D_axjjw")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="blocked_zone"]
position = Vector2(192, -440)
shape = SubResource("RectangleShape2D_hirpx")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="blocked_zone"]
position = Vector2(-760, 896)
shape = SubResource("RectangleShape2D_8nxm7")

[node name="container_buttons" type="VBoxContainer" parent="."]
z_index = 10
layout_mode = 0
offset_left = 48.0
offset_top = 640.0
offset_right = 912.0
offset_bottom = 1044.0

[node name="btn_main_menu" parent="container_buttons" instance=ExtResource("3_icvp0")]
layout_mode = 2
text_manager_message = "[anim_collect_special]Main Menu"

[node name="btn_back_to_overworld" parent="container_buttons" instance=ExtResource("3_icvp0")]
z_index = -1
layout_mode = 2
text_manager_message = "[/]Back to Overworld"

[node name="btn_back_to_overworld2" parent="container_buttons" instance=ExtResource("3_icvp0")]
z_index = -2
layout_mode = 2
text_manager_message = "[anim_fade_out_up]testtesttesttesttesttesttest"

[node name="btn_back_to_overworld3" parent="container_buttons" instance=ExtResource("3_icvp0")]
z_index = -3
layout_mode = 2
theme = ExtResource("4_6dhn4")
text_manager_message = "[anim_loop_up_down]testtesttesttestte[anim_collect_special]sttesttest"

[node name="btn_back_to_overworld4" parent="container_buttons" instance=ExtResource("3_icvp0")]
z_index = -4
layout_mode = 2
text_manager_message = "[anim_loop_scale]someexample text i guess ???? ??"

[node name="btn_back_to_overworld5" parent="container_buttons" instance=ExtResource("3_icvp0")]
z_index = -5
layout_mode = 2
text_manager_message = "[anim_collect_special]Back to[/] Overwo[anim_collect_special]rld"

[connection signal="timeout" from="buttons_blocked" to="." method="_on_buttons_blocked_timeout"]
[connection signal="pressed" from="container_buttons/btn_main_menu" to="." method="_on_btn_main_menu_pressed"]
[connection signal="pressed" from="container_buttons/btn_back_to_overworld" to="." method="_on_btn_back_to_overworld_pressed"]
[connection signal="pressed" from="container_buttons/btn_back_to_overworld2" to="." method="_on_btn_back_to_overworld_pressed"]
[connection signal="pressed" from="container_buttons/btn_back_to_overworld3" to="." method="_on_btn_back_to_overworld_pressed"]
[connection signal="pressed" from="container_buttons/btn_back_to_overworld4" to="." method="_on_btn_back_to_overworld_pressed"]
[connection signal="pressed" from="container_buttons/btn_back_to_overworld5" to="." method="_on_btn_back_to_overworld_pressed"]
